--- a/config.json
+++ b/config.json
@@ -1,2 +1,2 @@
 {"api_url": "https://developer.api.bitcasa.com/v1", "access_token": "", "auth_token": "", "secret": "APP_SECRET_GOES_HERE", "client_id": 
-"CLIENT_ID_GOES_HERE", "redirect_url": "", "cache_dir" : "/tmp"}
+"CLIENT_ID_GOES_HERE", "redirect_url": "", "http_port" : "9090", "http_ip" : "0.0.0.0"}
